# banner-filter

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  README.rst  build.sh  main.cpp
include/: banner.h  banner_ex.h  banner_traits.h  filter.h  hash_back_inserter.h  lyciator.h  simple_thread_pool.h  tuple_utils.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  banner_tests.cpp
tests/: CMakeLists.txt  banner_tests.cpp
